<resources>
    <string name="app_name">GTinfo</string>
    <string name="title_gameserveritem_detail">Server details</string>

    <string name="card_server_name_default">…</string>
    <string name="card_server_address_default">0.0.0.0:0000</string>

    <string name="dialog_about_title"></string>
    <string name="dialog_about_version">Version: \u0020</string>
    <string name="dialog_about_ok">OK</string>
    <string name="dialog_about_version_name_error">\?</string>
    <string name="dialog_about_version_code_error">\?</string>
    <string name="dialog_about_servers_on_list">Servers: \u0020</string>

    <string name="dialog_confirmation_title_01">You have\u0020</string>
    <string name="dialog_confirmation_title_02a">\u0020servers on this list</string>
    <string name="dialog_confirmation_title_02b">\u0020server on this list</string>
    <string name="dialog_confirmation_message">Current list will be permanently deleted</string>
    <string name="dialog_confirmation_ok">OK</string>
    <string name="dialog_confirmation_cancel">Cancel</string>

    <string name="hint_add_servers_fab">Use orange button to add game server to your list</string>
    <string name="hint_add_servers_menu">Use + on action bar to add game server to your list</string>
    <string name="hint_add_servers_action">OK</string>

    <string name="menu_action_search">Search</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_about">About</string>
    <string name="menu_action_add_server">Add server</string>
    <string name="menu_action_share_server">Share server</string>
    <string name="menu_action_edit_server">Edit server</string>
    <string name="menu_action_reset_dataset_version">Reset dataset version</string>
    <string name="menu_action_populate">Populate list</string>
    <string name="menu_action_clear_list">Clear current list</string>
    <string name="menu_action_clear_list_empty_info">Servers list is empty</string>

    <string name="share_server_chooser_title">Share server name and IP</string>

    <string name="search_action_positive">Matching servers:\u0020</string>
    <string name="search_action_negative">No matching server found</string>

    <string name="server_add_title">Game server data</string>
    <string name="server_add_address_title">Server address and port:</string>
    <string name="server_add_name_title">Server name (max 30 characters):</string>
    <string name="server_add_name_hint">Short name (max 40char) for game server</string>
    <string name="server_add_rating_title">Server rating:</string>
    <string name="server_add_cancel">Cancel</string>
    <string name="server_add_ok">OK</string>
    <string name="server_add_invalid_address">Invalid server address</string>
    <string name="server_add_invalid_port">Invalid server port</string>
    <string name="server_add_address_hint">000.000.000.000:00000</string>

    <string name="server_edit_title">Edit server data</string>
    <string name="server_edit_copy_address">Server address copied to clipboard</string>
    <string name="server_edit_copy_name">Server name copied to clipboard</string>

    <string name="error_default_info">Problem with accessing game server data, check your Internet connection.</string>
    <string name="error_network_access">Check Internet connection</string>
    <string name="error_network_access_info">No Internet connection.</string>
    <string name="error_webview_default_info">Problem accessing game server data</string>

    <string name="confirmation_server_removed">\u0020removed.</string>
    <string name="confirmation_server_removed_undo">Undo</string>
    <string name="confirmation_server_restored">\u0020restored.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
