<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameServerItemListActivity">
    <item android:id="@+id/action_search"
        android:title="@string/menu_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_add_server"
        android:title="@string/menu_action_add_server"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="85"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_action_about"
        android:orderInCategory="95"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_action_settings"
        android:orderInCategory="90"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_populate"
        android:title="@string/menu_action_populate"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_list"
        android:title="@string/menu_action_clear_list"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>