<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="0dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="1dp"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view_normal"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:padding="6dip">
        <TextView
            android:id="@+id/server_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/card_server_name_default"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/server_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignWithParentIfMissing="true"
            android:text="@string/card_server_address_default"
            android:textSize="12sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/card_view_undo"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight">
        <TextView
            android:id="@+id/dismiss_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dip"
            android:layout_marginTop="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:gravity="top|center"
            android:text="@string/confirmation_server_removed"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/deleted_server"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_below="@+id/dismiss_info"
            android:layout_alignWithParentIfMissing="true"
            android:text=""
            android:textStyle="bold"
            android:textSize="13sp" />
        <TextView
            android:id="@+id/deleted_server_undo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="bottom|center"
            android:layout_below="@+id/deleted_server"
            android:layout_alignWithParentIfMissing="true"
            android:text="@string/confirmation_server_removed_undo"
            android:textColor="@color/icon_orange"
            android:textStyle="bold"
            android:textSize="14sp" />
        <ProgressBar
            android:id="@+id/undo_progress_bar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignRight="@id/deleted_server"
            />
    </RelativeLayout>
</android.support.v7.widget.CardView>